--- a/autumnal-equinox.ipynb
+++ b/autumnal-equinox.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vernal Equinox and Equatorial Coordinates\n",
+    "# Autumnal Equinox and Equatorial Coordinates\n",
     "\n",
     "The [equatorial coordinate system](https://en.wikipedia.org/wiki/Equatorial_coordinate_system) (ra, dec), is defined\n",
     "such that it alignes with the Earth's equator and poles. So a declination of dec = 0 is by definition on the equatorial plane projected on the sky. The right ascention is measured against the vernal equinox, which is defined as the point, where the sun is in south, or at an azimuth angle of 180 deg (azimuth angle is measured against north direction).\n",
