update of protype notebook

--- a/gammapy-event-sampling/prototype.ipynb
+++ b/gammapy-event-sampling/prototype.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
     "    \"\"\"\n",
     "    \n",
     "#     def __init__(self, npred_map, psf_map=None, edisp_map=None, background_map=None,\n",
-    "#                  random_state=0, exposure = None, lc = None):\n",
+    "#                  random_state=0, exposure = 1.0 * u.hour, lc = None):\n",
     "    def __init__(self, npred_map, background_map=None,\n",
     "                 random_state=0, exposure = None, lc = None):\n",
     "        self.random_state = get_random_state(random_state)\n",
@@ -233,9 +233,13 @@
     "        \n",
     "        normalization = self.lc.table['normalization'].data  \n",
     "        \n",
-    "        time_sampler = InverseCDFSampler(normalization,random_state=self.random_state)\n",
-    "        ToA = time_sampler.sample(n_events)\n",
+    "        if self.lc is not None:\n",
+    "            time_sampler = InverseCDFSampler(normalization,random_state=self.random_state)\n",
+    "            ToA = time_sampler.sample(n_events)\n",
     "        \n",
+    "        else:\n",
+    "            ToA = self.random_state.uniform(high=self.exposure.to('s').value, size=n_events)\n",
+    "\n",
     "        events = Table()\n",
     "        events['lon_true'] = coords[0] * u.deg\n",
     "        events['lat_true'] = coords[1] * u.deg\n",
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +315,8 @@
     "        self.events = events\n",
     "        self.psf_map = psf_map\n",
     "        self.edisp_map = edisp_map\n",
+    "        if self.psf_map is None:\n",
+    "            return 'Error, provide the PSF map\\n'\n",
     "\n",
     "    def sample(self):\n",
     "        \"\"\" Apply PSF corrections on the coordinates of the simulated source events \"\"\"       \n",
@@ -328,10 +334,7 @@
     "        self.events['lon_true'].name = 'lon_reco'\n",
     "        self.events['lat_true'].name = 'lat_reco'\n",
     "        \n",
-    "#         return self.events\n",
-    "    \n",
     "        \"\"\" Apply the energy dispersion for the energy of the simulated source events \"\"\"       \n",
-    "#     def apply_edisp(self):\n",
     "        if self.edisp_map is not None:\n",
     "            sample_pdf_edisp = InverseCDFSampler(self.edisp_map, axis=1)\n",
     "            pix_coord_edisp = sample_pdf_edisp.sample_axis()\n",
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=100</i>\n",
-       "<table id=\"table4647251416\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4412606672\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>lon_true</th><th>lat_true</th><th>e_true</th><th>time</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th>TeV</th><th>s</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -497,7 +500,7 @@
        "0.0014141716539458572    0.25548094665397286 ...  9410.827988000909"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,68 +584,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=100</i>\n",
-       "<table id=\"table4647251416\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>lon_reco</th><th>lat_reco</th><th>e_true</th><th>time</th></tr></thead>\n",
+       "<table id=\"table4412606672\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>lon_reco</th><th>lat_reco</th><th>e_reco</th><th>time</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th>TeV</th><th>s</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>0.07823964534958633</td><td>0.03294228583710436</td><td>1.025257281334419</td><td>13094.94203563773</td></tr>\n",
-       "<tr><td>359.95538030905317</td><td>0.07957931416859967</td><td>1.0311767245136272</td><td>4399.674772004161</td></tr>\n",
-       "<tr><td>0.1290450332134964</td><td>-0.150294014532731</td><td>1.0490503500762145</td><td>5811.407732957485</td></tr>\n",
-       "<tr><td>359.7254234582412</td><td>-0.3365237551944858</td><td>1.0630362412059156</td><td>12219.23988391783</td></tr>\n",
-       "<tr><td>359.8231999000277</td><td>0.21599295006257038</td><td>1.069196828061541</td><td>757.1003922370976</td></tr>\n",
-       "<tr><td>359.987940760191</td><td>-0.1176627290117236</td><td>1.0832676497369136</td><td>6616.419782810778</td></tr>\n",
-       "<tr><td>359.6904321476026</td><td>0.3151455912082397</td><td>1.0912896825415177</td><td>24757.91030156269</td></tr>\n",
-       "<tr><td>0.18212294968740264</td><td>0.08613338979481934</td><td>1.1052831552514997</td><td>3360.1719571405956</td></tr>\n",
-       "<tr><td>359.9123030545063</td><td>-0.4310445092018361</td><td>1.1130002234953702</td><td>12298.118826168242</td></tr>\n",
+       "<tr><td>0.07823964534958633</td><td>0.03294228583710436</td><td>1.0032358852294052</td><td>13094.94203563773</td></tr>\n",
+       "<tr><td>359.95538030905317</td><td>0.07957931416859967</td><td>1.0497384536728844</td><td>4399.674772004161</td></tr>\n",
+       "<tr><td>0.1290450332134964</td><td>-0.150294014532731</td><td>1.0305306964899101</td><td>5811.407732957485</td></tr>\n",
+       "<tr><td>359.7254234582412</td><td>-0.3365237551944858</td><td>1.0603565780810564</td><td>12219.23988391783</td></tr>\n",
+       "<tr><td>359.8231999000277</td><td>0.21599295006257038</td><td>1.01564811099223</td><td>757.1003922370976</td></tr>\n",
+       "<tr><td>359.987940760191</td><td>-0.1176627290117236</td><td>1.0526586465233525</td><td>6616.419782810778</td></tr>\n",
+       "<tr><td>359.6904321476026</td><td>0.3151455912082397</td><td>1.0616096537873438</td><td>24757.91030156269</td></tr>\n",
+       "<tr><td>0.18212294968740264</td><td>0.08613338979481934</td><td>1.2211353917370145</td><td>3360.1719571405956</td></tr>\n",
+       "<tr><td>359.9123030545063</td><td>-0.4310445092018361</td><td>1.203752898860843</td><td>12298.118826168242</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>0.28181193138690896</td><td>-0.005398546868146713</td><td>11.716267048126285</td><td>7618.407875594355</td></tr>\n",
-       "<tr><td>0.11897565304648476</td><td>0.05383482555536024</td><td>17.08823681133315</td><td>12325.49796225133</td></tr>\n",
-       "<tr><td>0.4237417390661355</td><td>-0.17521943984819716</td><td>17.298070417462657</td><td>6338.709749949656</td></tr>\n",
-       "<tr><td>0.19043819220355543</td><td>0.008256461068838556</td><td>18.53302080265333</td><td>103.03053721456278</td></tr>\n",
-       "<tr><td>0.15775632833631592</td><td>0.02762358060598315</td><td>30.068284108899483</td><td>13525.468286410294</td></tr>\n",
-       "<tr><td>359.9925901341436</td><td>-0.002551054611537352</td><td>30.135578560595683</td><td>1058.1725823112965</td></tr>\n",
-       "<tr><td>359.6610701648386</td><td>0.10334797494587686</td><td>41.39587804204178</td><td>8720.970648949215</td></tr>\n",
-       "<tr><td>0.10080270339153469</td><td>-0.16638076397323381</td><td>43.499263707273094</td><td>17398.94026375283</td></tr>\n",
-       "<tr><td>0.1289734432764272</td><td>0.09212571881983671</td><td>52.592020333407575</td><td>14169.122384428567</td></tr>\n",
-       "<tr><td>0.13623145683866544</td><td>0.4413878363100213</td><td>78.63715177583421</td><td>6551.479526929335</td></tr>\n",
+       "<tr><td>0.28181193138690896</td><td>-0.005398546868146713</td><td>10.465142395650265</td><td>7618.407875594355</td></tr>\n",
+       "<tr><td>0.11897565304648476</td><td>0.05383482555536024</td><td>16.18807833563526</td><td>12325.49796225133</td></tr>\n",
+       "<tr><td>0.4237417390661355</td><td>-0.17521943984819716</td><td>15.206379676931443</td><td>6338.709749949656</td></tr>\n",
+       "<tr><td>0.19043819220355543</td><td>0.008256461068838556</td><td>19.699825679254907</td><td>103.03053721456278</td></tr>\n",
+       "<tr><td>0.15775632833631592</td><td>0.02762358060598315</td><td>29.54620006287315</td><td>13525.468286410294</td></tr>\n",
+       "<tr><td>359.9925901341436</td><td>-0.002551054611537352</td><td>21.075736370919177</td><td>1058.1725823112965</td></tr>\n",
+       "<tr><td>359.6610701648386</td><td>0.10334797494587686</td><td>39.26375471954299</td><td>8720.970648949215</td></tr>\n",
+       "<tr><td>0.10080270339153469</td><td>-0.16638076397323381</td><td>38.43698319138232</td><td>17398.94026375283</td></tr>\n",
+       "<tr><td>0.1289734432764272</td><td>0.09212571881983671</td><td>52.795478385386495</td><td>14169.122384428567</td></tr>\n",
+       "<tr><td>0.13623145683866544</td><td>0.4413878363100213</td><td>54.70218692508679</td><td>6551.479526929335</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=100>\n",
-       "      lon_reco             lat_reco             e_true              time       \n",
+       "      lon_reco             lat_reco             e_reco              time       \n",
        "        deg                  deg                 TeV                 s         \n",
        "      float64              float64             float64            float64      \n",
        "------------------- --------------------- ------------------ ------------------\n",
-       "0.07823964534958633   0.03294228583710436  1.025257281334419  13094.94203563773\n",
-       " 359.95538030905317   0.07957931416859967 1.0311767245136272  4399.674772004161\n",
-       " 0.1290450332134964    -0.150294014532731 1.0490503500762145  5811.407732957485\n",
-       "  359.7254234582412   -0.3365237551944858 1.0630362412059156  12219.23988391783\n",
-       "  359.8231999000277   0.21599295006257038  1.069196828061541  757.1003922370976\n",
-       "   359.987940760191   -0.1176627290117236 1.0832676497369136  6616.419782810778\n",
-       "  359.6904321476026    0.3151455912082397 1.0912896825415177  24757.91030156269\n",
-       "0.18212294968740264   0.08613338979481934 1.1052831552514997 3360.1719571405956\n",
-       "  359.9123030545063   -0.4310445092018361 1.1130002234953702 12298.118826168242\n",
+       "0.07823964534958633   0.03294228583710436 1.0032358852294052  13094.94203563773\n",
+       " 359.95538030905317   0.07957931416859967 1.0497384536728844  4399.674772004161\n",
+       " 0.1290450332134964    -0.150294014532731 1.0305306964899101  5811.407732957485\n",
+       "  359.7254234582412   -0.3365237551944858 1.0603565780810564  12219.23988391783\n",
+       "  359.8231999000277   0.21599295006257038   1.01564811099223  757.1003922370976\n",
+       "   359.987940760191   -0.1176627290117236 1.0526586465233525  6616.419782810778\n",
+       "  359.6904321476026    0.3151455912082397 1.0616096537873438  24757.91030156269\n",
+       "0.18212294968740264   0.08613338979481934 1.2211353917370145 3360.1719571405956\n",
+       "  359.9123030545063   -0.4310445092018361  1.203752898860843 12298.118826168242\n",
        "                ...                   ...                ...                ...\n",
-       "0.28181193138690896 -0.005398546868146713 11.716267048126285  7618.407875594355\n",
-       "0.11897565304648476   0.05383482555536024  17.08823681133315  12325.49796225133\n",
-       " 0.4237417390661355  -0.17521943984819716 17.298070417462657  6338.709749949656\n",
-       "0.19043819220355543  0.008256461068838556  18.53302080265333 103.03053721456278\n",
-       "0.15775632833631592   0.02762358060598315 30.068284108899483 13525.468286410294\n",
-       "  359.9925901341436 -0.002551054611537352 30.135578560595683 1058.1725823112965\n",
-       "  359.6610701648386   0.10334797494587686  41.39587804204178  8720.970648949215\n",
-       "0.10080270339153469  -0.16638076397323381 43.499263707273094  17398.94026375283\n",
-       " 0.1289734432764272   0.09212571881983671 52.592020333407575 14169.122384428567\n",
-       "0.13623145683866544    0.4413878363100213  78.63715177583421  6551.479526929335"
+       "0.28181193138690896 -0.005398546868146713 10.465142395650265  7618.407875594355\n",
+       "0.11897565304648476   0.05383482555536024  16.18807833563526  12325.49796225133\n",
+       " 0.4237417390661355  -0.17521943984819716 15.206379676931443  6338.709749949656\n",
+       "0.19043819220355543  0.008256461068838556 19.699825679254907 103.03053721456278\n",
+       "0.15775632833631592   0.02762358060598315  29.54620006287315 13525.468286410294\n",
+       "  359.9925901341436 -0.002551054611537352 21.075736370919177 1058.1725823112965\n",
+       "  359.6610701648386   0.10334797494587686  39.26375471954299  8720.970648949215\n",
+       "0.10080270339153469  -0.16638076397323381  38.43698319138232  17398.94026375283\n",
+       " 0.1289734432764272   0.09212571881983671 52.795478385386495 14169.122384428567\n",
+       "0.13623145683866544    0.4413878363100213  54.70218692508679  6551.479526929335"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,16 +713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = vstack([events_src_psf_edisp, events_bkg])"
+    "table = vstack([events_src_irf, events_bkg])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
