update of protype notebook

--- a/gammapy-event-sampling/prototype.ipynb
+++ b/gammapy-event-sampling/prototype.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,24 +194,26 @@
     "    background_map : `~gammapy.cube.make_map_background_irf`\n",
     "        IRF background map.\n",
     "    random_state : seed for the random number sampler    \n",
-    "    exposure: livetime in hours, e.g. `10 * u.hour`    \n",
     "    lc : `~gammapy.time.models.LightCurveTableModel`\n",
-    "        input light-curve of the source, given with columns labelled as \"time\" and \"normalization\" (arbitrary units)\n",
-    "        \n",
+    "        input light-curve of the source, given with columns labelled as \"time\" and \"normalization\" (arbitrary units): \n",
+    "        the bin time HAS to be costant.\n",
+    "    tmin : start time of the simulation, in seconds \n",
+    "    tmax : stop time of the simulation, in seconds \n",
     "    \"\"\"\n",
     "    \n",
     "#     def __init__(self, npred_map, psf_map=None, edisp_map=None, background_map=None,\n",
-    "#                  random_state=0, exposure = 1.0 * u.hour, lc = None):\n",
+    "#                  random_state=0, exposure = None, lc = None):\n",
     "    def __init__(self, npred_map, background_map=None,\n",
-    "                 random_state=0, exposure = None, lc = None):\n",
+    "                 random_state=0, lc = None, tmin=0, tmax=3600):\n",
     "        self.random_state = get_random_state(random_state)\n",
     "        self.npred_map = npred_map\n",
     "#         self.psf_map = psf_map\n",
     "#         self.edisp_map = edisp_map\n",
     "        self.background_map = background_map\n",
-    "        self.exposure = exposure\n",
     "        self.lc = lc\n",
-    "\n",
+    "        self.tmin=tmin\n",
+    "        self.tmax=tmax\n",
+    "        \n",
     "    def npred_total(self):\n",
     "        \"\"\" Calculate the total number of the simulated predicted events \"\"\"       \n",
     "        #return self.random_state.poisson(self.npred_map.data.sum())\n",
@@ -230,21 +232,37 @@
     "        \n",
     "        pix_coords = cdf_sampler.sample(n_events)\n",
     "        coords = self.npred_map.geom.pix_to_coord(pix_coords[::-1])\n",
-    "        \n",
-    "        normalization = self.lc.table['normalization'].data  \n",
-    "        \n",
+    " \n",
     "        if self.lc is not None:\n",
-    "            time_sampler = InverseCDFSampler(normalization,random_state=self.random_state)\n",
-    "            ToA = time_sampler.sample(n_events)\n",
-    "        \n",
-    "        else:\n",
-    "            ToA = self.random_state.uniform(high=self.exposure.to('s').value, size=n_events)\n",
+    "            start_lc = self.lc.table['time'].data[0]\n",
+    "            stop_lc = self.lc.table['time'].data[-1]\n",
+    "            if (self.tmin >= start_lc) and (self.tmax <= stop_lc):\n",
+    "                time_range = np.where((self.lc.table['time'].data >= self.tmin) & (self.lc.table['time'].data <= self.tmax))\n",
+    "                normalization = self.lc.table['normalization'].data[time_range] \n",
+    "                time_sampler = InverseCDFSampler(normalization,random_state=self.random_state)\n",
+    "                ToA = time_sampler.sample(n_events)[0]\n",
+    "                \n",
+    "            elif ((self.tmin >= start_lc) and (self.tmax > stop_lc) and (self.tmin < stop_lc)):\n",
+    "                time_range = np.where((self.lc.table['time'].data >= self.tmin))\n",
+    "                # we assume a constant source, with a mean source normalization in the choosen interval, when tmax > stop_lc\n",
+    "                dt = self.lc.table['time'].data[1] - self.lc.table['time'].data[0]\n",
+    "                mean_norm = (1. /(stop_lc-self.tmin) * \n",
+    "                    np.sum(self.lc.table['normalization'].data[time_range] * np.full(len(time_range[0]),dt)) )\n",
+    "                normalization = np.append(self.lc.table['normalization'].data[time_range], np.full(int(self.tmax - stop_lc), mean_norm) )\n",
+    "                time_sampler = InverseCDFSampler(normalization,random_state=self.random_state)\n",
+    "                ToA = time_sampler.sample(n_events)[0]\n",
+    "                \n",
+    "            else:\n",
+    "                ToA = self.tmin + self.random_state.uniform(high=(self.tmax-self.tmin), size=n_events)\n",
     "\n",
+    "        else:\n",
+    "            ToA = self.tmin + self.random_state.uniform(high=(self.tmax-self.tmin), size=n_events)\n",
+    "        \n",
     "        events = Table()\n",
     "        events['lon_true'] = coords[0] * u.deg\n",
     "        events['lat_true'] = coords[1] * u.deg\n",
     "        events['e_true'] = coords[2] * u.TeV\n",
-    "        events['time'] = ToA[0] * u.s\n",
+    "        events['time'] = ToA * u.s\n",
     "        return events\n",
     "\n",
     "    def sample_background(self):\n",
@@ -256,7 +274,7 @@
     "        pix_coords = cdf_sampler.sample(n_events_bkg)\n",
     "        coords = self.npred_map.geom.pix_to_coord(pix_coords[::-1])\n",
     "        \n",
-    "        ToA = self.random_state.uniform(high=self.exposure.to('s').value, size=n_events_bkg)\n",
+    "        ToA = self.random_state.uniform(high=(self.tmax-self.tmin), size=n_events_bkg)\n",
     "        \n",
     "        events_bkg = Table()\n",
     "        events_bkg['lon_true'] = coords[0] * u.deg\n",
@@ -293,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,47 +447,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = MapEventSampler(npred, random_state=0, lc=lcurve)\n",
+    "sampler = MapEventSampler(npred, random_state=0, lc=lcurve, tmin=1000, tmax=30000)\n",
     "events_src=sampler.sample_npred()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=100</i>\n",
-       "<table id=\"table4412606672\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4690321192\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>lon_true</th><th>lat_true</th><th>e_true</th><th>time</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th>TeV</th><th>s</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>359.7333370969594</td><td>-0.07244496321415028</td><td>1.5217603637521027</td><td>20856.024970442253</td></tr>\n",
-       "<tr><td>359.85837797220023</td><td>0.20359207355119283</td><td>2.1419659842005205</td><td>546.250595022929</td></tr>\n",
-       "<tr><td>359.8918551765717</td><td>-0.019506425432173274</td><td>5.622337036174219</td><td>1356.8335074657912</td></tr>\n",
-       "<tr><td>359.7953553171566</td><td>-0.1186550073707349</td><td>1.7314521299420373</td><td>7569.424158766621</td></tr>\n",
-       "<tr><td>0.15735024730484043</td><td>0.2935878554699713</td><td>1.7356792123034828</td><td>10639.362318546835</td></tr>\n",
-       "<tr><td>359.9989314563643</td><td>-0.03092606310887902</td><td>1.7304144260407368</td><td>13714.548690295975</td></tr>\n",
-       "<tr><td>0.005488112715788418</td><td>-0.06926841577782568</td><td>1.206531807265262</td><td>4698.753642524257</td></tr>\n",
-       "<tr><td>359.7997714508275</td><td>0.17793342586080713</td><td>3.3898717477327427</td><td>28217.94613551266</td></tr>\n",
-       "<tr><td>359.8245883850299</td><td>-0.08019322105206583</td><td>1.4559340127482747</td><td>31580.604627888744</td></tr>\n",
+       "<tr><td>359.7333370969594</td><td>-0.07244496321415028</td><td>1.5217603637521027</td><td>19027.024970442253</td></tr>\n",
+       "<tr><td>359.85837797220023</td><td>0.20359207355119283</td><td>2.1419659842005205</td><td>530.250595022929</td></tr>\n",
+       "<tr><td>359.8918551765717</td><td>-0.019506425432173274</td><td>5.622337036174219</td><td>1315.8335074657912</td></tr>\n",
+       "<tr><td>359.7953553171566</td><td>-0.1186550073707349</td><td>1.7314521299420373</td><td>7252.424158766621</td></tr>\n",
+       "<tr><td>0.15735024730484043</td><td>0.2935878554699713</td><td>1.7356792123034828</td><td>10112.362318546835</td></tr>\n",
+       "<tr><td>359.9989314563643</td><td>-0.03092606310887902</td><td>1.7304144260407368</td><td>12910.548690295975</td></tr>\n",
+       "<tr><td>0.005488112715788418</td><td>-0.06926841577782568</td><td>1.206531807265262</td><td>4529.753642524257</td></tr>\n",
+       "<tr><td>359.7997714508275</td><td>0.17793342586080713</td><td>3.3898717477327427</td><td>24500.94613551266</td></tr>\n",
+       "<tr><td>359.8245883850299</td><td>-0.08019322105206583</td><td>1.4559340127482747</td><td>26624.604627888744</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>359.9948263186622</td><td>-0.0035576453361150584</td><td>30.135578560595683</td><td>1058.1725823112965</td></tr>\n",
-       "<tr><td>359.98301923383144</td><td>-0.23620304176194482</td><td>1.5714171647061466</td><td>8604.02893992903</td></tr>\n",
-       "<tr><td>359.93933390746906</td><td>-0.24977362034907089</td><td>5.199601411815321</td><td>5720.804446364347</td></tr>\n",
-       "<tr><td>0.10082034556273044</td><td>0.06448634057949448</td><td>17.08823681133315</td><td>12325.49796225133</td></tr>\n",
-       "<tr><td>0.012892623030561481</td><td>0.08195688968988066</td><td>3.5358538730155957</td><td>7542.862189058939</td></tr>\n",
-       "<tr><td>359.65286586219196</td><td>0.11724383034843357</td><td>41.39587804204178</td><td>8720.970648949215</td></tr>\n",
-       "<tr><td>0.17967342994632587</td><td>-0.10054161021953746</td><td>1.1763465343878494</td><td>13131.878245174923</td></tr>\n",
-       "<tr><td>0.1362953534952763</td><td>0.4392166931612599</td><td>78.63715177583421</td><td>6551.479526929335</td></tr>\n",
-       "<tr><td>359.7319748099839</td><td>-0.021868890015576313</td><td>1.2230749144976887</td><td>11108.674658385395</td></tr>\n",
-       "<tr><td>0.0014141716539458572</td><td>0.25548094665397286</td><td>6.022214671662589</td><td>9410.827988000909</td></tr>\n",
+       "<tr><td>359.9948263186622</td><td>-0.0035576453361150584</td><td>30.135578560595683</td><td>1026.1725823112965</td></tr>\n",
+       "<tr><td>359.98301923383144</td><td>-0.23620304176194482</td><td>1.5714171647061466</td><td>8223.02893992903</td></tr>\n",
+       "<tr><td>359.93933390746906</td><td>-0.24977362034907089</td><td>5.199601411815321</td><td>5502.804446364347</td></tr>\n",
+       "<tr><td>0.10082034556273044</td><td>0.06448634057949448</td><td>17.08823681133315</td><td>11655.49796225133</td></tr>\n",
+       "<tr><td>0.012892623030561481</td><td>0.08195688968988066</td><td>3.5358538730155957</td><td>7226.862189058939</td></tr>\n",
+       "<tr><td>359.65286586219196</td><td>0.11724383034843357</td><td>41.39587804204178</td><td>8331.970648949215</td></tr>\n",
+       "<tr><td>0.17967342994632587</td><td>-0.10054161021953746</td><td>1.1763465343878494</td><td>12385.878245174923</td></tr>\n",
+       "<tr><td>0.1362953534952763</td><td>0.4392166931612599</td><td>78.63715177583421</td><td>6291.479526929335</td></tr>\n",
+       "<tr><td>359.7319748099839</td><td>-0.021868890015576313</td><td>1.2230749144976887</td><td>10544.674658385395</td></tr>\n",
+       "<tr><td>0.0014141716539458572</td><td>0.25548094665397286</td><td>6.022214671662589</td><td>8975.827988000909</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -478,29 +496,29 @@
        "         deg                   deg           ...         s         \n",
        "       float64               float64         ...      float64      \n",
        "--------------------- ---------------------- ... ------------------\n",
-       "    359.7333370969594   -0.07244496321415028 ... 20856.024970442253\n",
-       "   359.85837797220023    0.20359207355119283 ...   546.250595022929\n",
-       "    359.8918551765717  -0.019506425432173274 ... 1356.8335074657912\n",
-       "    359.7953553171566    -0.1186550073707349 ...  7569.424158766621\n",
-       "  0.15735024730484043     0.2935878554699713 ... 10639.362318546835\n",
-       "    359.9989314563643   -0.03092606310887902 ... 13714.548690295975\n",
-       " 0.005488112715788418   -0.06926841577782568 ...  4698.753642524257\n",
-       "    359.7997714508275    0.17793342586080713 ...  28217.94613551266\n",
-       "    359.8245883850299   -0.08019322105206583 ... 31580.604627888744\n",
+       "    359.7333370969594   -0.07244496321415028 ... 19027.024970442253\n",
+       "   359.85837797220023    0.20359207355119283 ...   530.250595022929\n",
+       "    359.8918551765717  -0.019506425432173274 ... 1315.8335074657912\n",
+       "    359.7953553171566    -0.1186550073707349 ...  7252.424158766621\n",
+       "  0.15735024730484043     0.2935878554699713 ... 10112.362318546835\n",
+       "    359.9989314563643   -0.03092606310887902 ... 12910.548690295975\n",
+       " 0.005488112715788418   -0.06926841577782568 ...  4529.753642524257\n",
+       "    359.7997714508275    0.17793342586080713 ...  24500.94613551266\n",
+       "    359.8245883850299   -0.08019322105206583 ... 26624.604627888744\n",
        "                  ...                    ... ...                ...\n",
-       "    359.9948263186622 -0.0035576453361150584 ... 1058.1725823112965\n",
-       "   359.98301923383144   -0.23620304176194482 ...   8604.02893992903\n",
-       "   359.93933390746906   -0.24977362034907089 ...  5720.804446364347\n",
-       "  0.10082034556273044    0.06448634057949448 ...  12325.49796225133\n",
-       " 0.012892623030561481    0.08195688968988066 ...  7542.862189058939\n",
-       "   359.65286586219196    0.11724383034843357 ...  8720.970648949215\n",
-       "  0.17967342994632587   -0.10054161021953746 ... 13131.878245174923\n",
-       "   0.1362953534952763     0.4392166931612599 ...  6551.479526929335\n",
-       "    359.7319748099839  -0.021868890015576313 ... 11108.674658385395\n",
-       "0.0014141716539458572    0.25548094665397286 ...  9410.827988000909"
+       "    359.9948263186622 -0.0035576453361150584 ... 1026.1725823112965\n",
+       "   359.98301923383144   -0.23620304176194482 ...   8223.02893992903\n",
+       "   359.93933390746906   -0.24977362034907089 ...  5502.804446364347\n",
+       "  0.10082034556273044    0.06448634057949448 ...  11655.49796225133\n",
+       " 0.012892623030561481    0.08195688968988066 ...  7226.862189058939\n",
+       "   359.65286586219196    0.11724383034843357 ...  8331.970648949215\n",
+       "  0.17967342994632587   -0.10054161021953746 ... 12385.878245174923\n",
+       "   0.1362953534952763     0.4392166931612599 ...  6291.479526929335\n",
+       "    359.7319748099839  -0.021868890015576313 ... 10544.674658385395\n",
+       "0.0014141716539458572    0.25548094665397286 ...  8975.827988000909"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
