--- a/gammapy-event-sampling/prototype.ipynb
+++ b/gammapy-event-sampling/prototype.ipynb
@@ -457,14 +457,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=100</i>\n",
-       "<table id=\"table4690321192\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4603710712\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>lon_true</th><th>lat_true</th><th>e_true</th><th>time</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th>TeV</th><th>s</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -518,13 +518,40 @@
        "0.0014141716539458572    0.25548094665397286 ...  8975.827988000909"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "events_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.24826798, -0.31979729, -0.11097686, ..., -0.05354424,\n",
+       "        -0.13987339,  0.12588665],\n",
+       "       [ 2.89217296,  2.54115659,  3.42330057, ...,  4.35290419,\n",
+       "         1.23422955,  4.13899742]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalization = np.array([[0,1,2,3,4],[1,1,1,1,1]])\n",
+    "time_sampler = InverseCDFSampler(normalization,random_state=0)\n",
+    "time_sampler = time_sampler.sample(10000)\n",
+    "#np.mean(time_sampler)\n",
+    "time_sampler"
    ]
   },
   {
@@ -536,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,17 +582,17 @@
     "    coordsys=\"GAL\"\n",
     ")\n",
     "\n",
-    "psf_map = make_psf_map(psf_3d, geom=geom_psf, pointing=geom_psf.center_skydir, max_offset=3 * u.deg)\n",
+    "# psf_map = make_psf_map(psf_3d, geom=geom_psf, pointing=geom_psf.center_skydir, max_offset=3 * u.deg)\n",
     "\n",
-    "events_src.sort(\"e_true\")\n",
-    "coord = {\n",
-    "    \"lon\": events_src[\"lon_true\"].reshape(-1, 1),\n",
-    "    \"lat\": events_src[\"lat_true\"].reshape(-1, 1),\n",
-    "    \"energy\": events_src[\"e_true\"].quantity.reshape(-1, 1),\n",
-    "    \"theta\": (theta_axis.center * theta_axis.unit)\n",
-    "}\n",
+    "# events_src.sort(\"e_true\")\n",
+    "# coord = {\n",
+    "#     \"lon\": events_src[\"lon_true\"].reshape(-1, 1),\n",
+    "#     \"lat\": events_src[\"lat_true\"].reshape(-1, 1),\n",
+    "#     \"energy\": events_src[\"e_true\"].quantity.reshape(-1, 1),\n",
+    "#     \"theta\": (theta_axis.center * theta_axis.unit)\n",
+    "# }\n",
     "\n",
-    "pdf = psf_map.psf_map.interp_by_coord(coord)\n",
+    "# pdf = psf_map.psf_map.interp_by_coord(coord)\n",
     "\n",
     "\n",
     "### EDISP map creation\n",
@@ -591,6 +618,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pdf_edisp\n",
+    "# sample_pdf_edisp = InverseCDFSampler(edisp_map, axis=1)\n",
+    "# pix_coord_edisp = sample_pdf_edisp.sample_axis()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -602,74 +640,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<i>Table length=100</i>\n",
-       "<table id=\"table4412606672\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>lon_reco</th><th>lat_reco</th><th>e_reco</th><th>time</th></tr></thead>\n",
-       "<thead><tr><th>deg</th><th>deg</th><th>TeV</th><th>s</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>0.07823964534958633</td><td>0.03294228583710436</td><td>1.0032358852294052</td><td>13094.94203563773</td></tr>\n",
-       "<tr><td>359.95538030905317</td><td>0.07957931416859967</td><td>1.0497384536728844</td><td>4399.674772004161</td></tr>\n",
-       "<tr><td>0.1290450332134964</td><td>-0.150294014532731</td><td>1.0305306964899101</td><td>5811.407732957485</td></tr>\n",
-       "<tr><td>359.7254234582412</td><td>-0.3365237551944858</td><td>1.0603565780810564</td><td>12219.23988391783</td></tr>\n",
-       "<tr><td>359.8231999000277</td><td>0.21599295006257038</td><td>1.01564811099223</td><td>757.1003922370976</td></tr>\n",
-       "<tr><td>359.987940760191</td><td>-0.1176627290117236</td><td>1.0526586465233525</td><td>6616.419782810778</td></tr>\n",
-       "<tr><td>359.6904321476026</td><td>0.3151455912082397</td><td>1.0616096537873438</td><td>24757.91030156269</td></tr>\n",
-       "<tr><td>0.18212294968740264</td><td>0.08613338979481934</td><td>1.2211353917370145</td><td>3360.1719571405956</td></tr>\n",
-       "<tr><td>359.9123030545063</td><td>-0.4310445092018361</td><td>1.203752898860843</td><td>12298.118826168242</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>0.28181193138690896</td><td>-0.005398546868146713</td><td>10.465142395650265</td><td>7618.407875594355</td></tr>\n",
-       "<tr><td>0.11897565304648476</td><td>0.05383482555536024</td><td>16.18807833563526</td><td>12325.49796225133</td></tr>\n",
-       "<tr><td>0.4237417390661355</td><td>-0.17521943984819716</td><td>15.206379676931443</td><td>6338.709749949656</td></tr>\n",
-       "<tr><td>0.19043819220355543</td><td>0.008256461068838556</td><td>19.699825679254907</td><td>103.03053721456278</td></tr>\n",
-       "<tr><td>0.15775632833631592</td><td>0.02762358060598315</td><td>29.54620006287315</td><td>13525.468286410294</td></tr>\n",
-       "<tr><td>359.9925901341436</td><td>-0.002551054611537352</td><td>21.075736370919177</td><td>1058.1725823112965</td></tr>\n",
-       "<tr><td>359.6610701648386</td><td>0.10334797494587686</td><td>39.26375471954299</td><td>8720.970648949215</td></tr>\n",
-       "<tr><td>0.10080270339153469</td><td>-0.16638076397323381</td><td>38.43698319138232</td><td>17398.94026375283</td></tr>\n",
-       "<tr><td>0.1289734432764272</td><td>0.09212571881983671</td><td>52.795478385386495</td><td>14169.122384428567</td></tr>\n",
-       "<tr><td>0.13623145683866544</td><td>0.4413878363100213</td><td>54.70218692508679</td><td>6551.479526929335</td></tr>\n",
-       "</table>"
-      ],
       "text/plain": [
-       "<Table length=100>\n",
-       "      lon_reco             lat_reco             e_reco              time       \n",
-       "        deg                  deg                 TeV                 s         \n",
-       "      float64              float64             float64            float64      \n",
-       "------------------- --------------------- ------------------ ------------------\n",
-       "0.07823964534958633   0.03294228583710436 1.0032358852294052  13094.94203563773\n",
-       " 359.95538030905317   0.07957931416859967 1.0497384536728844  4399.674772004161\n",
-       " 0.1290450332134964    -0.150294014532731 1.0305306964899101  5811.407732957485\n",
-       "  359.7254234582412   -0.3365237551944858 1.0603565780810564  12219.23988391783\n",
-       "  359.8231999000277   0.21599295006257038   1.01564811099223  757.1003922370976\n",
-       "   359.987940760191   -0.1176627290117236 1.0526586465233525  6616.419782810778\n",
-       "  359.6904321476026    0.3151455912082397 1.0616096537873438  24757.91030156269\n",
-       "0.18212294968740264   0.08613338979481934 1.2211353917370145 3360.1719571405956\n",
-       "  359.9123030545063   -0.4310445092018361  1.203752898860843 12298.118826168242\n",
-       "                ...                   ...                ...                ...\n",
-       "0.28181193138690896 -0.005398546868146713 10.465142395650265  7618.407875594355\n",
-       "0.11897565304648476   0.05383482555536024  16.18807833563526  12325.49796225133\n",
-       " 0.4237417390661355  -0.17521943984819716 15.206379676931443  6338.709749949656\n",
-       "0.19043819220355543  0.008256461068838556 19.699825679254907 103.03053721456278\n",
-       "0.15775632833631592   0.02762358060598315  29.54620006287315 13525.468286410294\n",
-       "  359.9925901341436 -0.002551054611537352 21.075736370919177 1058.1725823112965\n",
-       "  359.6610701648386   0.10334797494587686  39.26375471954299  8720.970648949215\n",
-       "0.10080270339153469  -0.16638076397323381  38.43698319138232  17398.94026375283\n",
-       " 0.1289734432764272   0.09212571881983671 52.795478385386495 14169.122384428567\n",
-       "0.13623145683866544    0.4413878363100213  54.70218692508679  6551.479526929335"
+       "(100, 30)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "events_src_irf"
+    "np.shape(pdf_edisp)"
    ]
   },
   {
